# slashcox

./: .env.example  .gitignore  Makefile  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: beautify.yml
assets/: schema.txt
bot/: __init__.py  __main__.py  base.py  config.py  logger.py  manager.py  sql.py
bot/commands/: binary.py  calc.py  leet_code_problem.py  minecraft.py  ping.py
bot/commands/changePresence/: activity.py  status.py
bot/commands/fetch/: clearfetch.py  setfetch.py  showfetch.py  updatefetch.py
bot/commands/fun/: gen_spam.py  gigachad.py
bot/commands/minecraft/: players.py  status.py
bot/commands/mod/: removetag.py
bot/commands/request/: request.py  request_book.py  request_close.py  request_status.py
bot/commands/tag/: get.py  list.py  set.py
bot/commands/utility/: about.py  avatar.py  embeds.py  member_count.py  ping.py  version.py
bot/events/: on_interaction.py  on_member_join.py  on_message.py  on_raw_reaction_add.py  on_voice_state.py
bot/tasks/: activity.py  check_members.py  reminders.py  youtube.py
